Fixed layout overflows, added speakers.

--- a/style.css
+++ b/style.css
@@ -75,6 +75,12 @@ html {
   align-self: flex-end;
 }
 
+#navLanding {
+  flex-direction: column;
+  height: auto;
+  padding-bottom: 60px;
+}
+
 p a:link,
 p a:hover,
 p a:active,
@@ -198,18 +204,12 @@ p a:visited {
   background-size: cover;
 }
 
-#navLanding {
-  height: auto;
-  padding-bottom: 60px;
-}
-
 nav {
   width: 100%;
   height: 90px;
 }
 
 #landing {
-  height: calc(100% - 90px);
   flex-direction: column;
 }
 
@@ -415,12 +415,23 @@ footer {
     background-image: none;
     height: 100vh;
     padding-bottom: 0;
+    overflow: scroll;
   }
 
   #landing {
-    height: calc(100% - 130px);
     justify-content: center;
-    row-gap: 30px;
+    row-gap: min(30px, 3vh);
+    flex-grow: 1;
+    flex-shrink: 1;
+  }
+
+  #landing > * {
+    min-height: 0;
+  }
+
+  #foundation {
+    position: relative;
+    overflow: hidden;
   }
 
   .bgImgHome {
@@ -442,8 +453,9 @@ footer {
   }
 
   .invitationContainer {
-    padding: 30px;
+    padding: min(30px, 3vh);
     margin: 0;
+    overflow: hidden;
   }
 
   .fw800 {
